Fix white space under the footer on text pages

--- a/www/css/page.css
+++ b/www/css/page.css
@@ -1,5 +1,5 @@
 main {
-	margin: 20px 15px 20px 12px;
+	margin: 20px 15px 0 12px;
 }
 
 h1 {
@@ -36,7 +36,7 @@ article ul.tiny {
 
 @media (min-width: 480px) {
 	main {
-		margin: 24px 18px 20px 15px;
+		margin: 24px 18px 0 15px;
 	}
 
 	h1 {
@@ -54,13 +54,13 @@ article ul.tiny {
 
 @media (min-width: 666px) {
 	main {
-		margin: 24px 20px 20px 18px;
+		margin: 24px 20px 0 18px;
 	}
 }
 
 @media (min-width: 1004px) {
 	main {
-		margin: 45px 70px 60px 99px;
+		margin: 45px 70px 0 99px;
 		max-width: 800px;
 	}
 
